@@ -2,8 +2,9 @@ python-sqlfuse (0.5.3-1) unstable; urgency=low
 
   * Count directory links.
   * Fix passing the inode and mode to readdir. Arguments were backwards. Ouch.
+  * Fix passing the inode and mode to readdir. Type argument is not a mode. Ouch.
 
- -- Matthias Urlichs <smurf@deee.intern.smurf.noris.de>  Wed, 06 Apr 2011 19:39:12 +0200
+ -- Matthias Urlichs <smurf@deee.intern.smurf.noris.de>  Wed, 06 Apr 2011 23:12:42 +0200
 
 python-sqlfuse (0.5.2-1) unstable; urgency=low
 
